select2導入、プルダウン複数選択

--- a/package.json
+++ b/package.json
@@ -25,7 +25,10 @@
     },
     "dependencies": {
         "bootstrap-icons": "^1.8.1",
+        "bootstrap-multiselect": "^1.1.0",
         "bootstrap-select": "^1.13.18",
-        "node-fetch": "^3.2.0"
+        "knockout": "^3.5.1",
+        "node-fetch": "^3.2.0",
+        "select2": "^4.1.0-rc.0"
     }
 }
